--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,17 @@
         "version": "detect"
       }
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parser": "@babel/eslint-parser",
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "env": {
-      "browser": true
+      "browser": true,
+      "node": true
     },
     "rules": {
         "react/prop-types": "off",
