--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-unimodules": "^0.14.6",
     "react-native-web": "~0.13.12",
-    "react-router-native": "^5.2.1"
+    "react-router-native": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
