--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "dotenv": "^10.0.0",
     "expo": "~40.0.0",
     "expo-font": "^9.2.1",
