--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "plugins": ["react"],
+    "plugins": ["react", "jest"],
     "settings": {
       "react": {
         "version": "detect"
@@ -7,7 +7,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:jest/recommended"
     ],
     "parser": "@babel/eslint-parser",
     "parserOptions": {
