--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-unimodules": "^0.14.6",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "expo-linking": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
