--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-unimodules": "^0.14.6",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.1",
+    "use-debounce": "^7.0.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
